# epyestim

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
data/: CH_covid_cases_reported.csv
epyestim/: __init__.py  bootstrap.py  covid19.py  deconvolution.py  distributions.py  estimate_r.py  main.py  smoothen.py
notebooks/: covid_tutorial.ipynb
tests/: test_bagging_r.py  test_covid19.py  test_deconvolution.py  test_distributions.py  test_estimate_r.py  test_smoothen.py  test_start_date.py
