[metadata]
name = epyestim
version = 0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lo-hfk/epyestim
license = MIT License

[options]
packages = find:
install_requires =
    pandas
    numpy
    scipy
    statsmodels

[options.extras_require]
tests =
    pytest
